Add VCS configuration and update Razorpay secret in application.yml

--- a/backend (microservices)/payment/src/main/resources/application.yml
+++ b/backend (microservices)/payment/src/main/resources/application.yml
@@ -68,7 +68,7 @@ endpoints:
 razorpay:
   api:
     key: "YOUR_KEY_SECRET"
-    secret: "YOUR_KEY_SECRET"
+    secret: "YOUR_KEY "
 
 stripe:
   api:
